<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Notas"
    android:background="#0a0a0a"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/alumnos"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/carnet"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_text_carnet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:hint="@string/ejemplo_carnet"
            android:textColorHint="#a7ffffff"
            android:textSize="14sp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="10dp" />
        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/buscar"
            android:layout_marginRight="20dp"
            tools:ignore="SmallSp"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="@android:color/white"

            android:layout_marginLeft="15dp"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ejemplo_miguel_aviles"
            android:textColorHint="#a7ffffff"
            android:layout_marginRight="15dp"
            android:textSize="14sp"
            android:layout_marginEnd="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/notas"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginStart="15dp" />

        <EditText
            android:id="@+id/edit_text_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:hint="@string/ejemplo_9_5"
            android:textColorHint="#a7ffffff"
            android:textSize="14sp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="16dp" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal">
    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificar"
        android:layout_margin="15dp"
        android:textSize="10sp"
        tools:ignore="SmallSp" />
    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:layout_margin="15dp"
        android:textSize="10sp"
        tools:ignore="SmallSp" />
    <Button
        android:id="@+id/btn_limpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiar"
        android:layout_margin="15dp"
        android:textSize="10sp"
        tools:ignore="SmallSp" />
</LinearLayout>
</LinearLayout>