<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarAlumno"
    android:background="#0a0a0a"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/agregar_alumno"
        android:textColor="@android:color/white"
        android:layout_margin="15dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/carnet"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edit_text_carnet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:hint="@string/ejemplo_carnet"
            android:textColorHint="#a7ffffff"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="23dp"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="@android:color/white"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"/>
        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ejemplo_nombre"
            android:textColorHint="#a7ffffff"
            android:textColor="@android:color/white"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/agregar"
        android:textSize="12sp"/>
</LinearLayout>